Multi PR review issues fix
  * Unusual method name fix
  * Copyright year

Signed-off-by: Daniel Kec <daniel.kec@oracle.com>